dockerfile fix