@@ -1,4 +1,5 @@
 FROM openjdk:11
-ADD target/java-jenkins-docker.jar java-jenkins-docker.jar
-ENTRYPOINT ["java", "-jar","personal-expenses-managment.jar"]
 EXPOSE 8080
+RUN mkdir /app
+COPY build/libs/*.jar /app/personal-expenses-managment.jar
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/personal-expenses-managment.jar"]
